System is now fully completed after more code refactoring and full usage of validation class for book, client and librarian

--- a/src/unnamedlibrary/unnamedHistoryMenu.form
+++ b/src/unnamedlibrary/unnamedHistoryMenu.form
@@ -104,7 +104,7 @@
                       </Group>
                       <EmptySpace max="32767" attributes="0"/>
                       <Component id="jSeparator1" min="-2" pref="12" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="986" max="-2" attributes="0"/>
+                      <EmptySpace pref="974" max="32767" attributes="0"/>
                       <Component id="btnCancel" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
                   </Group>
@@ -734,9 +734,6 @@
                     </Property>
                     <Property name="requestFocusEnabled" type="boolean" value="false"/>
                   </Properties>
-                  <Events>
-                    <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtClientIDFocusGained"/>
-                  </Events>
                 </Component>
               </SubComponents>
             </Container>
